<resources>
    <string name="app_name">Fight_Club</string>
    <string name="phone_number">PhoneNum</string>
    <string name="password">Password</string>
    <string name="set_time">Set Schdule Boot Time</string>
    <string name="open_accessibility">Open Accessibility</string>
    <string name="step_one">First Step :</string>
    <string name="step_two">Second Step :</string>
    <string name="step_three">Third Step :</string>
    <string name="save_login_info">Save Login Info</string>
    <string name="rule_one">1st RULE: You do not talk about FIGHT CLUB.</string>
    <string name="rule_two">2nd RULE: You DO NOT talk about FIGHT CLUB.</string>
</resources>
